--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="./src/assets/guide-logo.ico" />
+    <link rel="icon" href="./src/assets/images/guide-logo.ico" />
     <title>GUIDE-UPC</title>
   </head>
   <body>
